[package]
name = "actix_web_async_example"
version = "0.1.0"
edition = "2021"
default-run = "server"
 

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
actix-web = "4.5"
serde = { version = "1.0", features = ["derive"] }
mime = "0.3"
serde_json = "*"
actix-files = "0.6"
futures = "0.3"
futures-util = "0.3"
derive_more = "0.99"
awc = "3.4"
actix-http = "3.6"

# log error
env_logger = "0.11"
log = "0.4"